# openbb-opentargets

./: .gitignore  README.md  pyproject.toml
openbb_opentargets/obbject/open_targets/: __init__.py
openbb_opentargets/providers/opentargets/: __init__.py
openbb_opentargets/providers/opentargets/models/: disease_associated_targets.py  search.py  target_associated_diseases.py
openbb_opentargets/providers/opentargets/utils/: __init__.py  helpers.py
openbb_opentargets/routers/: __init__.py  open_targets.py  open_targets_views.py
